--- a/MasterPieceApi/appsettings.json
+++ b/MasterPieceApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "JwtSettings": {
-    "SecretKey": "thisisaverysecureandlongsecretkey12345", // Minimum 32 characters
+    "SecretKey": "thisisaverysecureandlongsecretkey12345", 
     "Issuer": "yourIssuer",
     "Audience": "yourAudience",
     "ExpirationMinutes": 60
